# vla

./: create_sample_input.py  demo_laq_on_video.py  generate_laq_dataset.py  hello_llm.py  pyproject.toml  robotics_planner.py  setup_laq.sh  setup_sthv2_subset.py
docs/superpowers/plans/: 2026-04-14-hello-world-llm-plan.md  2026-04-14-robotics-planning-plan.md
docs/superpowers/specs/: 2026-04-14-hello-world-llm-design.md  2026-04-14-robotics-planning-design.md  2026-04-14-sthv2-data-setup-design.md
laq/: inference_sthv2.py
laq/laq_model/: __init__.py  laq_trainer.py  latent_action_quantization.py
tests/: test_laq_inference.py  test_sthv2_setup.py
val/fine_tuning/: README.md  calvin_to_lapa.py  finetune_calvin.sh  pyproject.toml  setup_calvin_lapa.sh
