[project]
name = "vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "torch>=2.11.0",
    "torchvision",
    "torchaudio",
    "transformers>=5.5.4",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "einops",
    "tqdm",
    "wandb",
    "beartype",
    "ema-pytorch",
    "numpy",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
