[project]
name = "calvin-lapa-finetune"
version = "0.1.0"
description = "Fine-tuning LAPA on CALVIN dataset"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "transformers==4.29.0",
    "datasets>=2.13.0",
    "tux @ git+https://github.com/lhao499/tux.git",
    "albumentations>=1.3.0",
    "pandas>=2.0.0",
    "sentencepiece>=0.1.99",
    "scipy>=1.10.0",
    "einops>=0.6.0",
    "chex>=0.1.0",
    "ml-collections>=0.1.0",
    "tqdm>=4.65.0",
    "pillow>=9.0.0",
    "huggingface-hub>=0.16.0",
    "wandb>=0.15.0",
]

[tool.uv]
dev-dependencies = []
